fix(Calendar): fix misalignment of month selection menu layout

--- a/src/DatePicker/styles/index.less
+++ b/src/DatePicker/styles/index.less
@@ -118,7 +118,6 @@
       }
     }
 
-    .rs-calendar-month-dropdown-cell-content,
     .rs-calendar-table-cell-content {
       width: @calendar-in-menu-content-side-length;
       height: @calendar-in-menu-content-side-length;
